Update tex-script of report

--- a/Lab1(creating samples)/Report/main.tex
+++ b/Lab1(creating samples)/Report/main.tex
@@ -120,35 +120,35 @@
         \begin{item}
             Нормальное распределение:
         \end{item}
-        \begin{equation}
+        \begin{equation}\label{norm}
             \textit{N}(\normalsize{\textit{x}}, \normalsize{0}, \normalsize{1}) = \dfrac{1}{\sqrt{2\pi}}e^{\frac{{-x}^2}{2}}
         \end{equation}
         
         \begin{item}
             Распределение Коши:
         \end{item}
-        \begin{equation}
+        \begin{equation}\label{cauch}
             \textit{C}(\normalsize{\textit{x}}, \normalsize{0}, \normalsize{1}) = \dfrac{1}{\pi}\dfrac{1}{x^2+1}
         \end{equation} 
         
         \begin{item}
             Распределение Лапласа:
         \end{item}
-        \begin{equation}
+        \begin{equation}\label{lapl}
             \textit{L}(\normalsize{\textit{x}}, \normalsize{0}, \normalsize{\dfrac{1}{\sqrt{2}}}) = \normalsize{\dfrac{1}{\sqrt{2}}e^{-\sqrt{2}|x|}}
         \end{equation}
         
         \begin{item}
             Распределение Пуассона:
         \end{item}
-        \begin{equation}
+        \begin{equation}\label{pois}
             \textit{P}(\normalsize{\textit{k}}, \normalsize{10}) = \dfrac{10^\textit{k}}{\textit{k}!}e^{-10}
         \end{equation}
         
         \begin{item}
             Равномерное распределение:
         \end{item}
-        \begin{equation}
+        \begin{equation}\label{unif}
             \textit{U}(\normalsize{\textit{x}}, \normalsize{-\sqrt{3}}, \normalsize{\sqrt{3}}) = \begin{cases}
                                             \dfrac{1}{2\sqrt{3}} & \text{при $|\textit{x}|\leq\sqrt{3}$}\\
                                             0 & \text{при $|\textit{x}| > \sqrt{3}$}\\
@@ -182,36 +182,36 @@
         \begin{figure}[H]
             \centering
             \includegraphics[scale = 0.4]{Normal_Distribution.JPG}
-            \caption{Нормальное распределение}
-            \label{fig:my_label}
+            \caption{Нормальное распределение \eqref{norm}}
+            \label{fig:normal}
         \end{figure}
         
         \begin{figure}[H]
             \centering
             \includegraphics[scale = 0.4]{Cauchy_Distribution.JPG}
-            \caption{Распределение Коши}
-            \label{fig:my_label}
+            \caption{Распределение Коши \eqref{cauch}}
+            \label{fig:cauchy}
         \end{figure}
         
         \begin{figure}[H]
             \centering
             \includegraphics[scale = 0.4]{Laplace_Distribution.JPG}
-            \caption{Распределение Лапласа}
-            \label{fig:my_label}
+            \caption{Распределение Лапласа \eqref{lapl}}
+            \label{fig:laplace}
         \end{figure}
         
         \begin{figure}[H]
             \centering
             \includegraphics[scale = 0.4]{Poisson_Distrubution.JPG}
-            \caption{Распределение Пуассона}
-            \label{fig:my_label}
+            \caption{Распределение Пуассона \eqref{pois}}
+            \label{fig:poisson}
         \end{figure}
         
         \begin{figure}[H]
             \centering
             \includegraphics[scale = 0.4]{Uniform_Distribution.JPG}
-            \caption{Равномерное распределение}
-            \label{fig:my_label}
+            \caption{Равномерное распределение \eqref{unif}}
+            \label{fig:uniform}
         \end{figure}
 
     
