Update tex-script for report

--- a/Lab2(create stat characteristics)/Report/main.tex
+++ b/Lab2(create stat characteristics)/Report/main.tex
@@ -238,14 +238,23 @@
              & \overline{x} \eqref{mean} & \textit{med x} \eqref{med} & \textit{z}_R \eqref{extr} & \textit{z}_Q \eqref{quart} & \textit{z}_{tr} \eqref{trunc}\\ \hline
              $E(z)$ \eqref{E} & 0.0004 & 0.2475 & -0.0034 & 0.3104 & 0.422\\ \hline
              $D(z)$ \eqref{D} & 0.1005 & 0.1319 & 0.1828 & 0.1266 & 0.1929\\ \hline
+             $E - \sqrt{D}$ & -0.3189 & -0.1405 & -0.4405 & -0.0414 & -0.0238 \\ \hline
+             $E + \sqrt{D}$ & 0.2976 & 0.61 & 0.4235 & 0.6499 & 0.84 \\ \hline
+             Estimation & 0.0 & 0.0 & 0.0 & $0^{+1}$ & $0^{+1}$ \\ \hline
              normal n = 100 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
              $E(z)$ \eqref{E} & 0.0011 & 0.0224 & 0.0181 & 0.0145 & 0.6287\\ \hline
              $D(z)$ \eqref{D} & 0.0093 & 0.0147 & 0.093 & 0.0119 & 0.023 \\ \hline
+             $E - \sqrt{D}$ & -0.1066 & -0.1037 & -0.3262 & -0.1038 & 0.4613 \\ \hline
+             $E + \sqrt{D}$ & 0.0956 & 0.1454 & 0.3184 & 0.1228 & 0.7845 \\ \hline
+             Estimation & 0.0 & 0.0 & 0.0 & 0.0 & $0^{+1}$ \\ \hline
              normal n = 1000 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
              $E(z)$ \eqref{E} & 0.0007 & 0.0031 & 0.0063 & 0.0022 & 0.6367\\ \hline
              $D(z)$ \eqref{D} & 0.0011 & 0.0016 & 0.0657 & 0.0014 & 0.0026 \\ \hline
+             $E - \sqrt{D}$ & -0.0328 & -0.0391 & -0.2587 & -0.0348 & 0.5826 \\ \hline
+             $E + \sqrt{D}$ & 0.0321 & 0.0423 & 0.2433 & 0.0372 & 0.6849 \\ \hline
+             Estimation & 0.0 & 0.0 & 0.0 & 0.0 & $0^{1}$ \\ \hline
         \end{tabular}
         \caption{Характеристики нормального распределения \eqref{norm}}
         \label{tab:norm_tab}
@@ -257,16 +266,25 @@
             \hline
              cauchy n = 10 & & & & & \\ \hline
              & \overline{x} \eqref{mean} & \textit{med x} \eqref{med} & \textit{z}_R \eqref{extr} & \textit{z}_Q \eqref{quart} & \textit{z}_{tr} \eqref{trunc}\\ \hline
-             $E(z)$ \eqref{E} & 3.2342 & 0.4268 & 16.1933 & 1.127 & 9.0583\\ \hline
-             $D(z)$ \eqref{D} & 3296.7681 & 0.4775 & 82205.7055 & 3.5466 & 9000.5072\\ \hline
+             $E(z)$ \eqref{E} & 2.0874 & 0.4028 & 10.6049 & 1.0676 & 7.0882\\ \hline
+             $D(z)$ \eqref{D} & 1734.692 & 0.4305 & 43204.7097 & 4.703 & 4606.8807\\ \hline
+             $E - \sqrt{D}$ & -39.5622 & -0.2534 & -197.2525 & -1.101 & -60.7858 \\ \hline
+             $E + \sqrt{D}$ & 43.737 & 1.0589 & 218.4624 & 3.2363 & 74.9622 \\ \hline
+             Estimation & - & $0^{+1}_{-1}$ & - & $1^{+2}_{-1}$ & -\\ \hline
              cauchy n = 100 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
-             $E(z)$ \eqref{E} & -2.4426 & 0.0369 & -120.455 & 0.0331, 6.0248\\ \hline
-             $D(z)$ \eqref{D} & 5229.3575 & 0.0246 & 13034764.0549 & 0.053 & 437.5538 \\ \hline
+             $E(z)$ \eqref{E} & -1.9491 & 0.027 & -96.1502 & 0.0249 & 7.6371\\ \hline
+             $D(z)$ \eqref{D} & 3963.3208 & 0.0247 & 9781880.7879 & 0.0556 & 641.2068 \\ \hline
+             $E - \sqrt{D}$ & -64.904 & -0.1302 & -3223.7501 & -0.2109 & -17.6849 \\ \hline
+             $E + \sqrt{D}$ & 61.0058 & 0.1841 & 3031.4496 & 0.2607 & 32.9592 \\ \hline
+             Estimation & - & 0.0 & - & 0.0 & - \\ \hline
              cauchy n = 1000 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
-             $E(z)$ \eqref{E} & -3.7405 & 0.0035 & -1886.7218 & 0.0028 & 32.8812\\ \hline
-             $D(z)$ \eqref{D} & 351915.338 & 0.0026 & 87839440642.4975 & 0.0056 & 276417.646 \\ \hline
+             $E(z)$ \eqref{E} & -2.557 & 0.0023 & -1304.1555 & 0.0033 & 7.3359\\ \hline
+             $D(z)$ \eqref{D} & 1585.6463 & 0.0024 & 390457865.8927 & 0.0048 & 280.3181 \\ \hline
+             $E - \sqrt{D}$ & -42.3772 & -0.0467 & -21064.1622 & -0.0663 & -9.4068 \\ \hline
+             $E + \sqrt{D}$ & 37.2632 & 0.0513 & 18455.8513 & 0.0729 & 24.0786 \\ \hline
+             Estimation & - & 0.0 & - & 0.0 & - \\ \hline
         \end{tabular}
         \caption{Характеристики распределения Коши \eqref{cauc}}
         \label{tab:cauch_tab}
@@ -278,16 +296,25 @@
             \hline
              laplace n = 10 & & & & & \\ \hline
              & \overline{x} \eqref{mean} & \textit{med x} \eqref{med} & \textit{z}_R \eqref{extr} & \textit{z}_Q \eqref{quart} & \textit{z}_{tr} \eqref{trunc}\\ \hline
-             $E(z)$ \eqref{E} & 0.0197 & 0.1889 & 0.05 & 0.3222 & 0.4359\\ \hline
-             $D(z)$ \eqref{D} & 0.0975 & 0.0783 & 0.4115 & 0.1317 & 0.1767\\ \hline
+             $E(z)$ \eqref{E} & 0.0112 & 0.1825 & 0.0383 & 0.3002 & 0.4213\\ \hline
+             $D(z)$ \eqref{D} & 0.1024 & 0.0843 & 0.4016 & 0.118 & 0.1708\\ \hline
+             $E - \sqrt{D}$ & -0.3089 & -0.108 & -0.5955 & -0.0432 & 0.008 \\ \hline
+             $E + \sqrt{D}$ & 0.3313 & 0.4729 & 0.672 & 0.6437 & 0.8346 \\ \hline
+             Estimation & 0 & 0 & 0 & 0 & $0^{+1}$ \\ \hline
              laplace n = 100 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
-             $E(z)$ \eqref{E} & -0.0067 & 0.0113 & 0.0098 & 0.0047 & 0.5806\\ \hline
-             $D(z)$ \eqref{D} & 0.0095 & 0.0054 & 0.4287 & 0.0096 & 0.0203\\ \hline
+             $E(z)$ \eqref{E} & -0.0038 & 0.0104 & 0.016 & 0.0087 & 0.586\\ \hline
+             $D(z)$ \eqref{D} & 0.0103 & 0.0057 & 0.4165 & 0.0099 & 0.0216\\ \hline
+             $E - \sqrt{D}$ & -0.1054 & -0.0648 & -0.6294 & -0.091 & 0.4389 \\ \hline
+             $E + \sqrt{D}$ & 0.0978 & 0.0856 & 0.6614 & 0.1085 & 0.7331 \\ \hline
+             Estimation & 0.0 & 0.0 & $0^{+1}_{-1}$ & 0.0 & $0^{+1}$ \\ \hline
              laplace n = 1000 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
-             $E(z)$ \eqref{E} & -0.0013 & 0.0008 & -0.0042 & 0.001 & 0.5965\\ \hline
-             $D(z)$ \eqref{D} & 0.001 & 0.0006 & 0.394 & 0.0011 & 0.0022\\ \hline
+             $E(z)$ \eqref{E} & -0.0013 & 0.0007 & -0.0087 & 0.0002 & 0.5971\\ \hline
+             $D(z)$ \eqref{D} & 0.001 & 0.0005 & 0.3856 & 0.0009 & 0.002\\ \hline
+             $E - \sqrt{D}$ & -0.0322 & -0.0218 & -0.6297 & -0.0306 & 0.5526 \\ \hline
+             $E + \sqrt{D}$ & 0.0296 & 0.0232 & 0.6123 & 0.0311 & 0.6416 \\ \hline
+             Estimation & 0.0 & 0.0 & $0^{+1}_{-1}$ & 0.0 & $0^{+1}_{-1}$ \\ \hline
         \end{tabular}
         \caption{Характеристики распределения Лапласа \eqref{lapl}}
         \label{tab:lapl_tab}
@@ -299,16 +326,25 @@
             \hline
              pois n = 10 & & & & & \\ \hline
              & \overline{x} \eqref{mean} & \textit{med x} \eqref{med} & \textit{z}_R \eqref{extr} & \textit{z}_Q \eqref{quart} & \textit{z}_{tr} \eqref{trunc}\\ \hline
-             $E(z)$ \eqref{E} & 9.9856 & 10.6225 & 10.2885 & 10.9575 & 14.585\\ \hline
-             $D(z)$ \eqref{D} & 1.0347 & 1.5097 & 1.8355 & 1.4554 & 2.0978\\ \hline
+             $E(z)$ \eqref{E} & 10.0283 & 10.6825 & 10.3165 & 10.9835 & 14.6477\\ \hline
+             $D(z)$ \eqref{D} & 0.965 & 1.4219 & 2.0436 & 1.3155 & 1.9667\\ \hline
+             $E - \sqrt{D}$ & 9.0459 & 9.49 & 8.887 & 9.8366 & 13.2453 \\ \hline
+             $E + \sqrt{D}$ & 11.0107 & 11.875 & 11.746 & 12.1304 & 16.0501 \\ \hline
+             Estimation & $10^{+1}_{-1}$ & $10^{+1}_{-1}$ & $10^{+1}_{-1}$ & $10^{+2}_{-1}$ & $14^{+2}_{-1}$ \\ \hline
              pois n = 100 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
-             $E(z)$ \eqref{E} & 9.9906 & 9.9025 & 10.913 & 9.946 & 16.8963\\ \hline
-             $D(z)$ \eqref{D} & 0.1008 & 0.1932 & 1.0099 & 0.1621 & 0.2889\\ \hline
+             $E(z)$ \eqref{E} & 9.9989 & 9.909 & 10.8785 & 9.967 & 16.9031\\ \hline
+             $D(z)$ \eqref{D} & 0.0997 & 0.2022 & 0.9735 & 0.1529 & 0.2782\\ \hline
+             $E - \sqrt{D}$ & 9.6831 & 9.4593 & 9.8918 & 9.576 & 16.3756 \\ \hline
+             $E + \sqrt{D}$ & 10.3146 & 10.3587 & 11.8652 & 10.358 & 17.4305 \\ \hline
+             Estimation & $9^{+1}_{-1}$ & $9^{+1}_{-1}$ & $9^{+1}_{-1}$ & $9^{+1}_{-1}$ & $16^{+1}_{-1}$ \\ \hline
              pois n = 1000 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
-             $E(z)$ \eqref{E} & 10.0044 & 10.0 & 11.642 & 9.9965 & 16.9263\\ \hline
-             $D(z)$ \eqref{D} & 0.0097 & 0.0 & 0.6868 & 0.0017 & 0.0257\\ \hline
+             $E(z)$ \eqref{E} & 9.9969 & 9.997 & 11.6315 & 9.9925 & 16.9141\\ \hline
+             $D(z)$ \eqref{D} & 0.0097 & 0.0025 & 0.6285 & 0.0037 & 0.0253\\ \hline
+             $E - \sqrt{D}$ & 9.8983 & 9.9471 & 10.8387 & 9.9317 & 16.7551 \\ \hline
+             $E + \sqrt{D}$ & 10.0955 & 10.0469 & 12.4243 & 10.0533 & 17.0732 \\ \hline
+             Estimation & $9^{+1}_{-1}$ & $9^{+1}_{-1}$ & $11^{+1}_{-1}$ & $9^{+1}_{-1}$ & $16^{+1}_{-1}$\\ \hline
         \end{tabular}
         \caption{Характеристики распределения Пуассона \eqref{pois}}
         \label{tab:pois_tab}
@@ -320,20 +356,31 @@
             \hline
              uniform n = 10 & & & & & \\ \hline
              & \overline{x} \eqref{mean} & \textit{med x} \eqref{med} & \textit{z}_R \eqref{extr} & \textit{z}_Q \eqref{quart} & \textit{z}_{tr} \eqref{trunc}\\ \hline
-             $E(z)$ \eqref{E} & -0.0044 & 0.3122 & 0.0004 & 0.3151 & 0.4151\\ \hline
-             $D(z)$ \eqref{D} & 0.097 & 0.2125 & 0.0421 & 0.1293 & 0.2143\\ \hline
+             $E(z)$ \eqref{E} & -0.0016 & 0.3037 & 0.0024 & 0.3178 & 0.4173\\ \hline
+             $D(z)$ \eqref{D} & 0.1001 & 0.2241 & 0.0488 & 0.1233 & 0.2134\\ \hline
+             $E - \sqrt{D}$ & -0.318 & -0.1697 & -0.2186 & -0.0333 & -0.0447 \\ \hline
+             $E + \sqrt{D}$ & 0.3148 & 0.7771 & 0.2234 & 0.6689 & 0.8792 \\ \hline
+             Estimation & 0.0 & $0^{+1}$ & 0.0 & 0.0 & $0^{+1}$\\ \hline
              uniform n = 100 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
-             $E(z)$ \eqref{E} & 0.0039 & 0.0386 & 0.0005 & 0.0213 & 0.6512\\ \hline
-             $D(z)$ \eqref{D} & 0.0109 & 0.0309 & 0.0006 & 0.0162 & 0.0317\\ \hline
+             $E(z)$ \eqref{E} & -0.0011 & 0.0328 & 0.0009 & 0.0143 & 0.6392\\ \hline
+             $D(z)$ \eqref{D} & 0.0102 & 0.0302 & 0.0006 & 0.0148 & 0.0301\\ \hline
+             $E - \sqrt{D}$ & -0.1022 & -0.1409 & -0.0238 & -0.1076 & 0.4657 \\ \hline
+             $E + \sqrt{D}$ & 0.0999 & 0.2065 & 0.0257 & 0.1361 & 0.8127 \\ \hline
+             Estimation & 0.0 & 0.0 & 0.0 & 0.0 & $0^{+1}$ \\ \hline
              uniform n = 1000 & & & & & \\ \hline
              & \overline{x} & \textit{med x} & \textit{z}_R & \textit{z}_Q & \textit{z}_{tr}\\ \hline
-             $E(z)$ \eqref{E} & -0.0007 & 0.0024 & 0.0001 & 0.0015 & 0.6475\\ \hline
-             $D(z)$ \eqref{D} & 0.0011 & 0.0031 & 0.0 & 0.0015 & 0.0033\\ \hline
+             $E(z)$ \eqref{E} & -0.0007 & 0.0022 & -0.0001 & 0.0017 & 0.6479\\ \hline
+             $D(z)$ \eqref{D} & 0.0009 & 0.003 & 0.0 & 0.0014 & 0.0028\\ \hline
+             $E - \sqrt{D}$ & -0.0315 & -0.0522 & -0.0026 & -0.0356 & 0.5945 \\ \hline
+             $E + \sqrt{D}$ & 0.0301 & 0.0567 & 0.0024 & 0.039 & 0.7012 \\ \hline
+             Estimation & 0.0 & 0.0 & 0.0 & 0.0 & $0^{+1}$ \\ \hline
         \end{tabular}
         \caption{Характеристики равномерного распределения \eqref{unif}}
         \label{tab:unif_tab}
     \end{table}
+    
+    
     
 \section{Обсуждение}
     \subsection{Характеристики положения и рассеяния}
